# scorep_plugin_perfcomponent

./: .gitmodules  CMakeLists.txt  README.md  perfc.c
